--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,81 @@ header{
 	color: #fff;
 }
 
+/*SKILL*/
+
+#skills{
+	background: #FFFFFF;
+}
+
+#skills_content{
+	width: 90%;
+	margin: 30px auto;
+	text-align: center;
+}
+
+#skills h3{
+	font-size: 45px;
+	color: #3C4761;
+}
+
+#skills p{
+	font-size: 20px;
+	color: #3C4761;
+}
+
+#skills #mar{
+	width: 150px;
+	height: 3px;
+	background: #72787E;
+	margin: 20px auto;
+
+}
+
+
+
+/*PROGRESS BAR*/
+
+svg.radial-progress {
+  height: auto;
+  max-width: 200px;
+  padding: 1em;
+  transform: rotate(-90deg);
+  width: 100%;
+}
+
+#progress_item_1 circle{
+	stroke: #30BAE7;
+}
+
+#progress_item_2 circle{
+	stroke: #D74680;
+}
+
+#progress_item_3 circle{
+	stroke: #15C7A8;
+}
+
+#progress_item_4 circle{
+	stroke: #EB7D4B;
+}
+
+
+svg.radial-progress circle {
+  fill: rgba(0,0,0,0);
+  stroke-dashoffset: 219.91148575129; 
+  stroke-width: 10;
+}
+
+svg.radial-progress circle.incomplete { opacity: 0.25; }
+
+svg.radial-progress circle.complete { stroke-dasharray: 219.91148575129; }
+
+svg.radial-progress text {
+  fill: #149F5B;
+  text-anchor: middle;
+}
+
+
 
 
 
