--- a/css/style.css
+++ b/css/style.css
@@ -262,6 +262,25 @@ svg.radial-progress text {
 	background: #D74680;
 }
 
+#opinions #txt{
+	color: #fff;
+	font-size: 35px;
+	text-align: center;
+	padding-top: 80px;
+}
+
+#opinions #qty{
+	font-size: 20px;
+	text-align: center;
+}
+
+#opinions #bar{
+	height: 4px;
+	width: 150px;
+	background: #FFFFFF;
+	margin: 10px auto;
+}
+
 #opinions_content{
 	width: 90%;
 	margin: 0 auto;
@@ -300,6 +319,140 @@ svg.radial-progress text {
 	color: #FFDD99;
 }
 
+#protfolios{
+	background: #FFDD99;
+}
+
+#profolios_content{
+	width: 90%;
+	margin: 0 auto;
+}
+
+#profolios_content p{
+	text-align: center;
+	font-size: 20px;
+}
+
+#profolios_content #txt{
+	text-align: center;
+	color: #fff;
+	font-size: 35px;
+	padding-top: 80px;
+}
+
+#profolios_content #bar{
+	height: 4px;
+	background: #F1F1F1;
+	width: 150px;
+	margin: 10px auto;
+}
+
+#main_content{
+	display: flex;
+	flex-flow: wrap;
+	justify-content: center;
+	padding-bottom: 80px;
+}
+
+#main_content #portfolioes_1{
+	width: 300px;
+	margin: 15px;
+	text-align: center;
+}
+
+#portfolioes_1 img{
+	width: 100%;
+}
+
+/*TOUCH*/
+
+#touch{
+	background: #3C5499;
+}
+
+#main_touch{
+	width: 90%;
+	margin: 0 auto;
+}
+
+#main_touch h3{
+	padding-top: 80px;
+	color: #fff;
+	text-align: center;
+	font-size: 35px;
+}
+
+#main_touch #bar{
+	height: 4px;
+	width: 150px;
+	background: #C1C1C1;
+	margin: 15px auto;
+}
+
+#main_touch p{
+	text-align: center;
+	font-size: 20px;
+	margin: 15px auto;
+}
+
+#form_div{
+	display: flex;
+	justify-content: center;
+}
+
+#form_div #inp{
+	width: 250px;
+	background: #273A71;
+	height: 50px;
+	color: #fff!important;
+}
+
+#form_div #btn{
+	padding: 15px;
+	font-size: 20px;
+	display: block;
+	background: #30BAE7;
+	margin: 10px auto;
+	color: #fff;
+	border-radius: 5px;
+}
+
+
+#form_div textarea{
+	display: block;
+	width: 500px;
+	min-height: 350px;
+	background: #273A71;
+	margin: 15px auto;
+}
+
+/*FOOTER*/
+
+footer{
+	background: #344B8E;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+#main_footer{
+	width: 90%;
+	margin: 0 auto;
+}
+
+#footer_content{
+	display: flex;
+	flex-flow: wrap;
+	justify-content: center;
+}
+
+#footer_content a{
+	display: block;
+	color: #fff;
+	margin: 10px;
+	padding: 10px;
+	font-size: 30px;
+	text-decoration: none;
+}
 
 /*MEDIA QUERY*/
 
