--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ header{
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border: 1px solid black;
 }
 
 #main_header #menu a{
@@ -60,6 +59,8 @@ header{
 #main_header p a{
 	background: #EB7D4B;
 	padding: 20px 30px;
+	text-decoration: none;
+	color: #fff;
 }
 
 .fa-window-close{
@@ -401,7 +402,8 @@ svg.radial-progress text {
 }
 
 #form_div #inp{
-	width: 250px;
+	width: 100%;
+	max-width: 49%;
 	background: #273A71;
 	height: 50px;
 	color: #fff!important;
@@ -461,6 +463,11 @@ footer{
 		display: block;
 		font-size: 35px;
 		margin: 15px!important;
+	}
+
+	#form_div #inp{
+		max-width: 100%;
+		margin: 10px;
 	}
 
 	#menu{
